--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -61,5 +61,5 @@ en:
       not_found: "n'a pas été trouvé(e)"
       not_locked: "n'était pas verrouillé(e)"
       not_saved:
-        one: ""
-        other: ""
+        one: "1 erreur a empêché ce(tte) %{resource} d'être sauvegardé(e) :"
+        other: "%{count} erreurs ont empêché ce(tte) %{resource} d'être sauvegardé(e) :"
